chore: upgrade to Junit 5